{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 1085,
  "lineage": "b51f450f-7280-74ba-a203-4d52c6f47cdb",
  "resources": [
    {
      "module": "module.VPC_and_Subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ebb8ac293f5f4163",
            "arn": "arn:aws:ec2:us-east-1:796973514009:elastic-ip/eipalloc-0ebb8ac293f5f4163",
            "domain": "vpc",
            "id": "eipalloc-0ebb8ac293f5f4163",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-214-240-81.compute-1.amazonaws.com",
            "public_ip": "3.214.240.81",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.VPC_and_Subnets.aws_internet_gateway.igw",
            "module.VPC_and_Subnets.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_and_Subnets",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:internet-gateway/igw-005f5fba09f059aea",
            "id": "igw-005f5fba09f059aea",
            "owner_id": "796973514009",
            "tags": {
              "Name": "igwgtf"
            },
            "tags_all": {
              "Name": "igwgtf"
            },
            "vpc_id": "vpc-0aed49d60d5f51138"
          },
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_and_Subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ebb8ac293f5f4163",
            "association_id": "eipassoc-0d041658b0eabefd6",
            "connectivity_type": "public",
            "id": "nat-02fe6d7d0e68d802e",
            "network_interface_id": "eni-0302c0f00bce32f32",
            "private_ip": "10.0.10.128",
            "public_ip": "3.214.240.81",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06cfff31d55f0743a",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "module.VPC_and_Subnets.aws_eip.lb",
            "module.VPC_and_Subnets.aws_internet_gateway.igw",
            "module.VPC_and_Subnets.aws_subnet.public1",
            "module.VPC_and_Subnets.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_and_Subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03075f2fa6b2bce331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02fe6d7d0e68d802e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03075f2fa6b2bce33",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_and_Subnets.aws_eip.lb",
            "module.VPC_and_Subnets.aws_internet_gateway.igw",
            "module.VPC_and_Subnets.aws_nat_gateway.nat",
            "module.VPC_and_Subnets.aws_route_table.private",
            "module.VPC_and_Subnets.aws_subnet.public1",
            "module.VPC_and_Subnets.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_and_Subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-005f5fba09f059aea",
            "id": "r-rtb-0452746b808b44cce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0452746b808b44cce",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_and_Subnets.aws_internet_gateway.igw",
            "module.VPC_and_Subnets.aws_route_table.public",
            "module.VPC_and_Subnets.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_and_Subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:route-table/rtb-03075f2fa6b2bce33",
            "id": "rtb-03075f2fa6b2bce33",
            "owner_id": "796973514009",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "routeptf"
            },
            "tags_all": {
              "Name": "routeptf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aed49d60d5f51138"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_and_Subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:route-table/rtb-0452746b808b44cce",
            "id": "rtb-0452746b808b44cce",
            "owner_id": "796973514009",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "routetf"
            },
            "tags_all": {
              "Name": "routetf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aed49d60d5f51138"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_and_Subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd8980975a485fa8",
            "route_table_id": "rtb-03075f2fa6b2bce33",
            "subnet_id": "subnet-0581f52e5a0f1d3fd"
          },
          "dependencies": [
            "module.VPC_and_Subnets.aws_route_table.private",
            "module.VPC_and_Subnets.aws_subnet.private1",
            "module.VPC_and_Subnets.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_and_Subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4a21c28eb735589",
            "route_table_id": "rtb-03075f2fa6b2bce33",
            "subnet_id": "subnet-099a73cab10a3a669"
          },
          "dependencies": [
            "module.VPC_and_Subnets.aws_route_table.private",
            "module.VPC_and_Subnets.aws_subnet.private2",
            "module.VPC_and_Subnets.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_and_Subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ea041e00b8d5557",
            "route_table_id": "rtb-0452746b808b44cce",
            "subnet_id": "subnet-06cfff31d55f0743a"
          },
          "dependencies": [
            "module.VPC_and_Subnets.aws_route_table.public",
            "module.VPC_and_Subnets.aws_subnet.public1",
            "module.VPC_and_Subnets.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_and_Subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02da90134758b7665",
            "route_table_id": "rtb-0452746b808b44cce",
            "subnet_id": "subnet-006cf8823509ac856"
          },
          "dependencies": [
            "module.VPC_and_Subnets.aws_route_table.public",
            "module.VPC_and_Subnets.aws_subnet.public2",
            "module.VPC_and_Subnets.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_and_Subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:subnet/subnet-0581f52e5a0f1d3fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0581f52e5a0f1d3fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "796973514009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "vpc_id": "vpc-0aed49d60d5f51138"
          },
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_and_Subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:subnet/subnet-099a73cab10a3a669",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099a73cab10a3a669",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "796973514009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "vpc_id": "vpc-0aed49d60d5f51138"
          },
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_and_Subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:subnet/subnet-06cfff31d55f0743a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cfff31d55f0743a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "796973514009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public1"
            },
            "tags_all": {
              "Name": "public1"
            },
            "vpc_id": "vpc-0aed49d60d5f51138"
          },
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_and_Subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:subnet/subnet-006cf8823509ac856",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006cf8823509ac856",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "796973514009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public1"
            },
            "tags_all": {
              "Name": "public1"
            },
            "vpc_id": "vpc-0aed49d60d5f51138"
          },
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_and_Subnets",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:vpc/vpc-0aed49d60d5f51138",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-086855ab08266ccef",
            "default_route_table_id": "rtb-0fb408b98d500b3c5",
            "default_security_group_id": "sg-0b8d0c34613607c8e",
            "dhcp_options_id": "dopt-0635d5a326d9cb739",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aed49d60d5f51138",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb408b98d500b3c5",
            "owner_id": "796973514009",
            "tags": {
              "Name": "mainvpc"
            },
            "tags_all": {
              "Name": "mainvpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:security-group/sg-0538a217da5ff8b35",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0538a217da5ff8b35",
            "ingress": [],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "796973514009",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion_sg"
            },
            "tags_all": {
              "Name": "bastion_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aed49d60d5f51138"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "proxy_engress_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "default_rule",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:security-group-rule/sgr-0d50986bdf138650c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0d50986bdf138650c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0538a217da5ff8b35",
            "security_group_rule_id": "sgr-0d50986bdf138650c",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.bastion_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "proxy_ingress1_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:security-group-rule/sgr-08bbbb4110e5ba508",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-08bbbb4110e5ba508",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0538a217da5ff8b35",
            "security_group_rule_id": "sgr-08bbbb4110e5ba508",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.bastion_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_1_ubuntu_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ubuntu_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a98573e58903ee0",
            "arn": "arn:aws:ec2:us-east-1:796973514009:instance/i-08d34efa2d0d27f65",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08d34efa2d0d27f65",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06cdd9e0567252ee9",
            "private_dns": "ip-10-0-30-233.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.30.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-095f17d3e00a12d96",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a92ffda6b2168da7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0581f52e5a0f1d3fd",
            "tags": {
              "Name": "nginx_1"
            },
            "tags_all": {
              "Name": "nginx_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a92ffda6b2168da7"
            ]
          },
          "dependencies": [
            "module.VPC_and_Subnets.aws_subnet.private1",
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.nginx_1_ubuntu_instance.data.aws_ami.ubuntu",
            "module.nginx_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_2_ubuntu_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ubuntu_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a98573e58903ee0",
            "arn": "arn:aws:ec2:us-east-1:796973514009:instance/i-0c46e6fe536471b2e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c46e6fe536471b2e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-093f68edd412ead18",
            "private_dns": "ip-10-0-40-223.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.40.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0165b6fb1be05788e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a92ffda6b2168da7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-099a73cab10a3a669",
            "tags": {
              "Name": "nginx_2"
            },
            "tags_all": {
              "Name": "nginx_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a92ffda6b2168da7"
            ]
          },
          "dependencies": [
            "module.VPC_and_Subnets.aws_subnet.private2",
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.nginx_2_ubuntu_instance.data.aws_ami.ubuntu",
            "module.nginx_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:796973514009:loadbalancer/app/nginx-lb/affd6f2de2b8fefb",
            "arn_suffix": "app/nginx-lb/affd6f2de2b8fefb",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-nginx-lb-1602197032.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:796973514009:loadbalancer/app/nginx-lb/affd6f2de2b8fefb",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06be5b16a7b0e7bef"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0581f52e5a0f1d3fd"
              },
              {
                "subnet_id": "subnet-099a73cab10a3a669"
              }
            ],
            "subnets": [
              "subnet-0581f52e5a0f1d3fd",
              "subnet-099a73cab10a3a669"
            ],
            "tags": {
              "Name": "nginx_lb"
            },
            "tags_all": {
              "Name": "nginx_lb"
            },
            "vpc_id": "vpc-0aed49d60d5f51138",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.VPC_and_Subnets.aws_subnet.private1",
            "module.VPC_and_Subnets.aws_subnet.private2",
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.nginx_lb_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public_lb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:796973514009:listener/app/nginx-lb/affd6f2de2b8fefb/532fdff0ac072e8a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:796973514009:targetgroup/nginx-tg/a26f7e9c71c87f36",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:796973514009:listener/app/nginx-lb/affd6f2de2b8fefb/532fdff0ac072e8a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:796973514009:loadbalancer/app/nginx-lb/affd6f2de2b8fefb",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_and_Subnets.aws_subnet.private1",
            "module.VPC_and_Subnets.aws_subnet.private2",
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.nginx_lb.aws_lb.loadbalancer",
            "module.nginx_lb.aws_lb_target_group.target_group",
            "module.nginx_lb_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:796973514009:targetgroup/nginx-tg/a26f7e9c71c87f36",
            "arn_suffix": "targetgroup/nginx-tg/a26f7e9c71c87f36",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:796973514009:targetgroup/nginx-tg/a26f7e9c71c87f36",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "nginx_tg"
            },
            "tags_all": {
              "Name": "nginx_tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0aed49d60d5f51138"
          },
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lb_tg_p1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:796973514009:targetgroup/nginx-tg/a26f7e9c71c87f36-20240923130215571400000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:796973514009:targetgroup/nginx-tg/a26f7e9c71c87f36",
            "target_id": "i-08d34efa2d0d27f65"
          },
          "dependencies": [
            "module.VPC_and_Subnets.aws_subnet.private1",
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.nginx_1_ubuntu_instance.aws_instance.Ubuntu_instance",
            "module.nginx_1_ubuntu_instance.data.aws_ami.ubuntu",
            "module.nginx_lb.aws_lb_target_group.target_group",
            "module.nginx_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lb_tg_p2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:796973514009:targetgroup/nginx-tg/a26f7e9c71c87f36-20240923130215607200000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:796973514009:targetgroup/nginx-tg/a26f7e9c71c87f36",
            "target_id": "i-0c46e6fe536471b2e"
          },
          "dependencies": [
            "module.VPC_and_Subnets.aws_subnet.private2",
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.nginx_2_ubuntu_instance.aws_instance.Ubuntu_instance",
            "module.nginx_2_ubuntu_instance.data.aws_ami.ubuntu",
            "module.nginx_lb.aws_lb_target_group.target_group",
            "module.nginx_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_lb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:security-group/sg-06be5b16a7b0e7bef",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-06be5b16a7b0e7bef",
            "ingress": [],
            "name": "nginx_lb_sg",
            "name_prefix": "",
            "owner_id": "796973514009",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx_lb_sg"
            },
            "tags_all": {
              "Name": "nginx_lb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aed49d60d5f51138"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_lb_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "proxy_engress_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "default_rule",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:security-group-rule/sgr-07bb41a96c8b2de5c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-07bb41a96c8b2de5c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06be5b16a7b0e7bef",
            "security_group_rule_id": "sgr-07bb41a96c8b2de5c",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.nginx_lb_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_lb_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "proxy_ingress1_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:security-group-rule/sgr-047e4702e39cc758d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-047e4702e39cc758d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0857dc8c5aca0c6f9",
            "security_group_id": "sg-06be5b16a7b0e7bef",
            "security_group_rule_id": "sgr-047e4702e39cc758d",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.nginx_lb_sg.aws_security_group.security_group",
            "module.reverse_proxy_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:security-group/sg-0a92ffda6b2168da7",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0a92ffda6b2168da7",
            "ingress": [],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "796973514009",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx_sg"
            },
            "tags_all": {
              "Name": "nginx_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aed49d60d5f51138"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "proxy_engress_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "default_rule",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:security-group-rule/sgr-05fc75cf1ec204838",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-05fc75cf1ec204838",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a92ffda6b2168da7",
            "security_group_rule_id": "sgr-05fc75cf1ec204838",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.nginx_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "proxy_ingress1_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:security-group-rule/sgr-0b13c3dfef368447a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0b13c3dfef368447a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-06be5b16a7b0e7bef",
            "security_group_id": "sg-0a92ffda6b2168da7",
            "security_group_rule_id": "sgr-0b13c3dfef368447a",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.bastion_sg.aws_security_group.security_group",
            "module.nginx_lb_sg.aws_security_group.security_group",
            "module.nginx_sg.aws_security_group.security_group"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:security-group-rule/sgr-0ed33260bf2c99865",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0ed33260bf2c99865",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0538a217da5ff8b35",
            "security_group_id": "sg-0a92ffda6b2168da7",
            "security_group_rule_id": "sgr-0ed33260bf2c99865",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.bastion_sg.aws_security_group.security_group",
            "module.nginx_lb_sg.aws_security_group.security_group",
            "module.nginx_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.reverse_proxy_1_ubuntu_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ubuntu_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a98573e58903ee0",
            "arn": "arn:aws:ec2:us-east-1:796973514009:instance/i-015b04b36c3f4cef1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-015b04b36c3f4cef1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0372330500fac2489",
            "private_dns": "ip-10-0-10-233.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.233",
            "public_ip": "3.87.106.114",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0deb74510db4ee14f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0857dc8c5aca0c6f9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06cfff31d55f0743a",
            "tags": {
              "Name": "reverse_proxy_1"
            },
            "tags_all": {
              "Name": "reverse_proxy_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0857dc8c5aca0c6f9"
            ]
          },
          "dependencies": [
            "module.VPC_and_Subnets.aws_subnet.private1",
            "module.VPC_and_Subnets.aws_subnet.private2",
            "module.VPC_and_Subnets.aws_subnet.public1",
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.nginx_lb.aws_lb.loadbalancer",
            "module.nginx_lb_sg.aws_security_group.security_group",
            "module.reverse_proxy_1_ubuntu_instance.data.aws_ami.ubuntu",
            "module.reverse_proxy_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.reverse_proxy_2_ubuntu_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ubuntu_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a98573e58903ee0",
            "arn": "arn:aws:ec2:us-east-1:796973514009:instance/i-05fc56c5db147a01f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05fc56c5db147a01f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06b4aac3760f65c1f",
            "private_dns": "ip-10-0-20-160.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.160",
            "public_ip": "3.91.34.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-033a45cc0e9e5b538",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0857dc8c5aca0c6f9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-006cf8823509ac856",
            "tags": {
              "Name": "reverse_proxy_2"
            },
            "tags_all": {
              "Name": "reverse_proxy_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0857dc8c5aca0c6f9"
            ]
          },
          "dependencies": [
            "module.VPC_and_Subnets.aws_subnet.private1",
            "module.VPC_and_Subnets.aws_subnet.private2",
            "module.VPC_and_Subnets.aws_subnet.public2",
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.nginx_lb.aws_lb.loadbalancer",
            "module.nginx_lb_sg.aws_security_group.security_group",
            "module.reverse_proxy_2_ubuntu_instance.data.aws_ami.ubuntu",
            "module.reverse_proxy_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.reverse_proxy_lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:796973514009:loadbalancer/app/reverse-proxy-lb/b3ab83822956a0d9",
            "arn_suffix": "app/reverse-proxy-lb/b3ab83822956a0d9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "reverse-proxy-lb-118852033.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:796973514009:loadbalancer/app/reverse-proxy-lb/b3ab83822956a0d9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "reverse-proxy-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07156fcc71bcd8133"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-006cf8823509ac856"
              },
              {
                "subnet_id": "subnet-06cfff31d55f0743a"
              }
            ],
            "subnets": [
              "subnet-006cf8823509ac856",
              "subnet-06cfff31d55f0743a"
            ],
            "tags": {
              "Name": "reverse_proxy_lb"
            },
            "tags_all": {
              "Name": "reverse_proxy_lb"
            },
            "vpc_id": "vpc-0aed49d60d5f51138",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.VPC_and_Subnets.aws_subnet.public1",
            "module.VPC_and_Subnets.aws_subnet.public2",
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.reverse_proxy_lb_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.reverse_proxy_lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public_lb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:796973514009:listener/app/reverse-proxy-lb/b3ab83822956a0d9/3c9cb7b0beb66006",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:796973514009:targetgroup/reverse-proxy-tg/2e2f2fe3c96e9a58",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:796973514009:listener/app/reverse-proxy-lb/b3ab83822956a0d9/3c9cb7b0beb66006",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:796973514009:loadbalancer/app/reverse-proxy-lb/b3ab83822956a0d9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_and_Subnets.aws_subnet.public1",
            "module.VPC_and_Subnets.aws_subnet.public2",
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.reverse_proxy_lb.aws_lb.loadbalancer",
            "module.reverse_proxy_lb.aws_lb_target_group.target_group",
            "module.reverse_proxy_lb_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.reverse_proxy_lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:796973514009:targetgroup/reverse-proxy-tg/2e2f2fe3c96e9a58",
            "arn_suffix": "targetgroup/reverse-proxy-tg/2e2f2fe3c96e9a58",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:796973514009:targetgroup/reverse-proxy-tg/2e2f2fe3c96e9a58",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "reverse-proxy-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "reverse_proxy_tg"
            },
            "tags_all": {
              "Name": "reverse_proxy_tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0aed49d60d5f51138"
          },
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.reverse_proxy_lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lb_tg_p1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:796973514009:targetgroup/reverse-proxy-tg/2e2f2fe3c96e9a58-2024092313054536250000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:796973514009:targetgroup/reverse-proxy-tg/2e2f2fe3c96e9a58",
            "target_id": "i-015b04b36c3f4cef1"
          },
          "dependencies": [
            "module.VPC_and_Subnets.aws_subnet.private1",
            "module.VPC_and_Subnets.aws_subnet.private2",
            "module.VPC_and_Subnets.aws_subnet.public1",
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.nginx_lb.aws_lb.loadbalancer",
            "module.nginx_lb_sg.aws_security_group.security_group",
            "module.reverse_proxy_1_ubuntu_instance.aws_instance.Ubuntu_instance",
            "module.reverse_proxy_1_ubuntu_instance.data.aws_ami.ubuntu",
            "module.reverse_proxy_lb.aws_lb_target_group.target_group",
            "module.reverse_proxy_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.reverse_proxy_lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lb_tg_p2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:796973514009:targetgroup/reverse-proxy-tg/2e2f2fe3c96e9a58-2024092313054574550000000b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:796973514009:targetgroup/reverse-proxy-tg/2e2f2fe3c96e9a58",
            "target_id": "i-05fc56c5db147a01f"
          },
          "dependencies": [
            "module.VPC_and_Subnets.aws_subnet.private1",
            "module.VPC_and_Subnets.aws_subnet.private2",
            "module.VPC_and_Subnets.aws_subnet.public2",
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.nginx_lb.aws_lb.loadbalancer",
            "module.nginx_lb_sg.aws_security_group.security_group",
            "module.reverse_proxy_2_ubuntu_instance.aws_instance.Ubuntu_instance",
            "module.reverse_proxy_2_ubuntu_instance.data.aws_ami.ubuntu",
            "module.reverse_proxy_lb.aws_lb_target_group.target_group",
            "module.reverse_proxy_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.reverse_proxy_lb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:security-group/sg-07156fcc71bcd8133",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-07156fcc71bcd8133",
            "ingress": [],
            "name": "reverse_proxy_lb_sg",
            "name_prefix": "",
            "owner_id": "796973514009",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "reverse_proxy_lb_sg"
            },
            "tags_all": {
              "Name": "reverse_proxy_lb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aed49d60d5f51138"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.reverse_proxy_lb_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "proxy_engress_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "default_rule",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:security-group-rule/sgr-050ab08c286831ae9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-050ab08c286831ae9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07156fcc71bcd8133",
            "security_group_rule_id": "sgr-050ab08c286831ae9",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.reverse_proxy_lb_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.reverse_proxy_lb_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "proxy_ingress1_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:security-group-rule/sgr-08d6f3312199e9305",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-08d6f3312199e9305",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07156fcc71bcd8133",
            "security_group_rule_id": "sgr-08d6f3312199e9305",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.reverse_proxy_lb_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.reverse_proxy_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:security-group/sg-0857dc8c5aca0c6f9",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0857dc8c5aca0c6f9",
            "ingress": [],
            "name": "reverse_proxy_sg",
            "name_prefix": "",
            "owner_id": "796973514009",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "reverse_proxy_sg"
            },
            "tags_all": {
              "Name": "reverse_proxy_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aed49d60d5f51138"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.reverse_proxy_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "proxy_engress_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "default_rule",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:security-group-rule/sgr-0202f9eb7e415bf9e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0202f9eb7e415bf9e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0857dc8c5aca0c6f9",
            "security_group_rule_id": "sgr-0202f9eb7e415bf9e",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.reverse_proxy_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.reverse_proxy_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "proxy_ingress1_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:security-group-rule/sgr-0db8ad5a687280b1b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0db8ad5a687280b1b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-07156fcc71bcd8133",
            "security_group_id": "sg-0857dc8c5aca0c6f9",
            "security_group_rule_id": "sgr-0db8ad5a687280b1b",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.bastion_sg.aws_security_group.security_group",
            "module.reverse_proxy_lb_sg.aws_security_group.security_group",
            "module.reverse_proxy_sg.aws_security_group.security_group"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973514009:security-group-rule/sgr-04e712c0dbd41f4c5",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-04e712c0dbd41f4c5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0538a217da5ff8b35",
            "security_group_id": "sg-0857dc8c5aca0c6f9",
            "security_group_rule_id": "sgr-04e712c0dbd41f4c5",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_and_Subnets.aws_vpc.myvpc",
            "module.bastion_sg.aws_security_group.security_group",
            "module.reverse_proxy_lb_sg.aws_security_group.security_group",
            "module.reverse_proxy_sg.aws_security_group.security_group"
          ]
        }
      ]
    }
  ]
}